# traditional-vision

./: .gitignore  404.html  CMakeLists.txt  Makefile  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml
basic/00env/: index.html
basic/01camera/: index.html
config/: config.json
docs/: index.md  video.md
docs/basic/: 00env.md  01camera.md
docs/envs/: PC.md  VM.md  WSL2.md  home.md
envs/PC/: index.html
envs/VM/: index.html
envs/WSL2/: index.html
envs/home/: index.html
include/: config.hpp  contour.hpp  contour_finder.hpp  general.hpp
resources/: ball_svm.xml
scripts/: detect_svm.py  hsv.py  on_mouse.py  train_svm.py
search/: search_index.json
src/: 01_camera_setting.cpp  02_basic_color_proc.cpp  03_contour.cpp  03_counter.cpp  04_contour.cpp  05_contour_inst.cpp  06_backsub.cpp  07_svm.cpp  ex1.cpp  ex2.cpp
src/config/: config.cpp
src/contour/: contour_finder.cpp
video/: index.html
